# aoc

./: .gitignore  main.go  readme.md
.github/workflows/: 2023.yml
2015/: .clang-format  .clangd  CMakeLists.txt  cmakelists.txt  main.c
2015/src/common/: utils.c  utils.h
2015/src/common/testing/: runner.c  testing.c  testing.h  testing_base.h  testing_registry.h
2015/src/common/utils/: io.c  math.c  mem.c  utils.h
2015/src/day01/: day01.c  day01.h  day01_test.c
2015/src/day02/: day02.c  day02.h  day02_test.c
2015/src/day03/: day03.c  day03.h  day03_test.c
2015/src/day04/: day04.c  day04.h  day04_test.c
2015/src/day05/: day05.c  day05.h  day05_test.c
2015/src/day06/: day06.c  day06.h  day06_test.c
2015/src/day07/: day07.c  day07.h  day07_test.c
2015/src/day08/: day08.c  day08.h  day08_test.c
2015/src/day09/: day09.c  day09.h  day09_test.c
2015/src/day10/: day10.c  day10.h  day10_test.c
2015/src/day11/: day11.c  day11.h  day11_test.c
2015/src/day12/: day12.c  day12.h  day12_test.c
2015/src/day13/: day13.c  day13.h  day13_test.c
2015/src/day14/: day14.c  day14.h  day14_test.c
2015/src/day15/: day15.c  day15.h  day15_test.c
2015/src/day16/: day16.c  day16.h  day16_test.c
2015/src/day17/: day17.c  day17.h  day17_test.c
2015/src/day18/: day18.c  day18.h  day18_test.c
2015/src/day19/: day19.c  day19.h  day19_test.c
2015/src/day20/: day20.c  day20.h  day20_test.c
2015/src/day21/: day21.c  day21.h  day21_test.c
2015/src/day22/: day22.c  day22.h  day22_test.c
2015/src/day23/: day23.c  day23.h  day23_test.c
2015/src/day24/: day24.c  day24.h  day24_test.c
2015/src/day25/: day25.c  day25.h  day25_test.c
2023/: main.go  readme.md
2023/src/day01/: day01.go  day01_test.go
2023/src/day02/: day02.go
2023/src/day03/: day03.go  day03_test.go
2023/src/day05/: day05.go
2023/src/day06/: day06.go
2023/src/day07/: day07.go
2023/src/day08/: day08_test.go
2023/src/day09/: day09_test.go
2023/src/day12/: day12.go  day12_test.go
2023/src/day13/: day13.go  day13_test.go
2023/src/day14/: day14.go  day14_test.go
2023/src/day15/: day15.go  day15_test.go
2023/src/day16/: day16.go  day16_test.go
src/day01/: day01.go  day01_test.go
src/day02/: day02.go  day02_test.go
src/day03/: day03.go  day03_test.go
src/day04/: day04.go  day04_test.go
src/day05/: day05.go  day05_test.go
src/day06/: day06.go  day06_test.go
src/day07/: day07.go  day07_test.go
src/day08/: day08.go  day08_test.go
src/day09/: day09.go  day09_test.go
src/day10/: day10.go  day10_test.go
src/day11/: day11.go  day11_test.go
test/: day01_test.go  day02_test.go  day03_test.go  day04_test.go
